// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RelativeTime /> renders 'just now' for browser lag future times 1`] = `
<span>
  just now
</span>
`;

exports[`<RelativeTime /> renders correctly 1`] = `
<span>
  2 months ago
</span>
`;
